--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+const { title } = Astro.props;
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,9 +8,9 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
-	<body>
+	<body class="bg-gray-50 dark:bg-gray-900">
 		<slot />
 	</body>
 </html>
