--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -12,6 +12,7 @@ if (!Astro.cookies.has("__session")) {
 const sessionCookie = Astro.cookies.get("__session").value;
 const decodedCookie = await auth.verifySessionCookie(sessionCookie);
 const user = await auth.getUser(decodedCookie.uid);
+console.log(user);
 
 if (!user) {
   return Astro.redirect("/signin");
