--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -2,6 +2,7 @@
 import { app } from "../firebase/server";
 import { getAuth } from "firebase-admin/auth";
 import Layout from "../layouts/Layout.astro";
+import Loading from "../components/Loading.astro";
 
 /* Check if the user is authenticated */
 const auth = getAuth(app);
@@ -15,15 +16,48 @@ if (Astro.cookies.has("__session")) {
 ---
 
 <Layout title="Sign in">
-  <h1>Sign in</h1>
-  <p>New here? <a href="/register">Create an account</a></p>
-  <form action="/api/auth/signin" method="post">
-    <label for="email" for="email">Email</label>
-    <input type="email" name="email" id="email" />
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" />
-    <button type="submit">Login</button>
-  </form>
+  <section class="bg-gray-50 dark:bg-gray-900">
+  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+      <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+          <img class="w-8 h-8 mr-2" src="../hot-icon.svg" alt="logo">
+          Flama    
+      </a>
+      <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+          <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                  Inicia sesión con tu cuenta
+              </h1>
+              <form class="space-y-4 md:space-y-6" action="/api/auth/signin" method="post">
+                  <div>
+                      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tu email</label>
+                      <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
+                  </div>
+                  <div>
+                      <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contraseña</label>
+                      <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
+                  </div>
+                  <div class="flex items-center justify-between">
+                      <div class="flex items-start">
+                          <div class="flex items-center h-5">
+                            <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" >
+                          </div>
+                          <div class="ml-3 text-sm">
+                            <label for="remember" class="text-gray-500 dark:text-gray-300">Recordarme</label>
+                          </div>
+                      </div>
+                      <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">olvido la contraseña?</a>
+                  </div>
+                  <button type="submit" class="w-full text-center text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                   <Loading ></Loading>
+                    <span id="text-btn">Sign in</span>
+                  <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                      No tienes una cuenta? <a href="/register" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Registrarse</a>
+                  </p>
+              </form>
+          </div>
+      </div>
+  </div>
+  </section>
 </Layout>
 <script>
   import {
@@ -32,6 +66,11 @@ if (Astro.cookies.has("__session")) {
     signInWithEmailAndPassword,
   } from "firebase/auth";
   import { app } from "../firebase/client";
+  const spinner = document.getElementById("spinner") as HTMLSpanElement;
+  spinner.style.display = "none";
+
+
+  
 
   const auth = getAuth(app);
   // This will prevent the browser from storing session data
@@ -40,6 +79,9 @@ if (Astro.cookies.has("__session")) {
   const form = document.querySelector("form") as HTMLFormElement;
   form.addEventListener("submit", async (e) => {
     e.preventDefault();
+    const textBtn = document.getElementById("text-btn") as HTMLSpanElement;
+    textBtn.style.display = "none";
+    spinner.style.display = "block";
     const formData = new FormData(form);
     const email = formData.get("email")?.toString();
     const password = formData.get("password")?.toString();
