--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -2,8 +2,14 @@
 import { app } from "../firebase/server";
 import { getAuth } from "firebase-admin/auth";
 import Layout from "../layouts/Layout.astro";
+import SiderBar from "../components/SiderBar.astro";
+import { getCollection } from 'astro:content';
+const { title, selector } = Astro.props;
 
 const auth = getAuth(app);
+
+const userCollection = await getCollection('users');
+console.log(userCollection)
 
 /* Check current session */
 if (!Astro.cookies.has("__session")) {
@@ -12,7 +18,7 @@ if (!Astro.cookies.has("__session")) {
 const sessionCookie = Astro.cookies.get("__session").value;
 const decodedCookie = await auth.verifySessionCookie(sessionCookie);
 const user = await auth.getUser(decodedCookie.uid);
-console.log(user);
+console.log(user.displayName);
 
 if (!user) {
   return Astro.redirect("/signin");
@@ -20,9 +26,12 @@ if (!user) {
 ---
 
 <Layout title="dashboard">
-  <h1>Welcome {user.displayName}</h1>
-  <p>We are happy to see you here</p>
-  <form action="/api/auth/signout">
-    <button type="submit">Sign out</button>
-  </form>
+  <div class="flex h-screen w-full">
+    <SiderBar display_name={user.displayName}, photo_url={user.photoURL}, selector={selector}	></SiderBar>
+    <div class="block h-screen w-full">
+        <nav class="w-full">
+            <slot />
+        </nav>
+        
+    </div>
 </Layout>
