--- a/src/components/SiderBar.astro
+++ b/src/components/SiderBar.astro
@@ -6,7 +6,7 @@ const pages:IPages []  = [
   {
     icon:   "clients", 
     name:  "Clientes", 
-    url:    "/clients/index" 
+    url:    "/clients" 
   },
  /* {
     icon:"rocket", 
