--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -1,18 +1,6 @@
 ---
-import { app } from "../firebase/server";
-import { getAuth } from "firebase-admin/auth";
 import Layout from "../layouts/Layout.astro";
 import Loading from "../components/Loading.astro";
-
-/* Check if the user is authenticated */
-const auth = getAuth(app);
-if (Astro.cookies.has("__session")) {
-  const sessionCookie = Astro.cookies.get("__session").value;
-  const decodedCookie = await auth.verifySessionCookie(sessionCookie);
-  if (decodedCookie) {
-    return Astro.redirect("/dashboard");
-  }
-}
 ---
 
 <Layout title="Sign in">
@@ -122,6 +110,7 @@ if (Astro.cookies.has("__session")) {
         Authorization: `Bearer ${idToken}`,
       },
     });
+    console.log(response);  
 
     if (response.redirected) {
       window.location.assign(response.url);
