--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,19 +2,19 @@
 // src/components/Projects.astro
 ---
 
-<section id="projects" class="py-20">
+<section id="projects" class="py-20  bg-gray-800">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center">Proyectos</h2>
       <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="bg-gray-700 p-6 rounded-lg">
-          <h3 class="text-xl font-bold">Proyecto 1</h3>
+        <div class=" p-6 rounded-lg  bg-neutral-900">
+          <h3 class="text-xl font-bold ">Proyecto 1</h3>
           <p class="mt-2">Descripción breve del proyecto 1.</p>
         </div>
-        <div class="bg-gray-700 p-6 rounded-lg">
+        <div class=" p-6 rounded-lg  bg-neutral-900">
           <h3 class="text-xl font-bold">Proyecto 2</h3>
           <p class="mt-2">Descripción breve del proyecto 2.</p>
         </div>
-        <div class="bg-gray-700 p-6 rounded-lg">
+        <div class="p-6 rounded-lg  bg-neutral-900">
           <h3 class="text-xl font-bold">Proyecto 3</h3>
           <p class="mt-2">Descripción breve del proyecto 3.</p>
         </div>
