--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ronald Pe#aloza</title>
+  <link rel="icon" type="image/x-icon" href="/images/r_p.png">
 </head>
 <body class=" text-white bg-neutral-900">
   <slot />
