mejore en el responsibe de skills

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@
   <title>Ronald Pe#aloza</title>
   <link rel="icon" type="image/x-icon" href="/images/r_p.png">
 </head>
-<body class=" text-white bg-neutral-900">
+<body class=" text-white bg-neutral-900 overflow-x-auto">
   <slot />
 </body>
 </html>
