--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -4,7 +4,7 @@ import 'animate.css';
 ---
 
 <section id="about" class="py-20 bg-gray-800">
-    <div class="container mx-auto px-4 ">
+    <div class="container mx-auto px-4 w-12/12 md:w-11/12 lg:w-10/12  xl:w-8/12  2xl:w-6/12 ">
       <h2 class="text-3xl font-bold text-center">Sobre Mí</h2>
       <div class="m-8  flex flex-col items-center">
         
