mejoras texto habilidades tecnicas

--- a/src/components/skills/index.astro
+++ b/src/components/skills/index.astro
@@ -15,8 +15,7 @@ await getCollection('data',({data}) => {
       <div class=" text-center space-y-6 w-full">
         <h2 class="text-3xl font-bold ">Habilidades Tecnicas</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia
-              doloribus!
+          Profesional de TI con habilidades en múltiples áreas, incluyendo desarrollo de software y administración de sistemas. Capacidad para adaptarme rápidamente a nuevas tecnologías y resolver problemas complejos de manera eficiente.
         </p> 
       </div>
       <div class="mt-6 text-center">
