--- a/src/components/skills/index.astro
+++ b/src/components/skills/index.astro
@@ -10,11 +10,11 @@ await getCollection('data',({data}) => {
 });
 
 ---
-<section id="experence" class="py-20 flex flex-nowrap overflow-x-auto justify-center " >
+<section id="experence" class="py-20 flex flex-nowrap overflow-x-auto " >
     <div class="flex flex-col  w-12/12 md:w-11/12 lg:w-10/12  xl:w-6/12  2xl:w-4/12 mx-auto px-4">
       <div class=" text-center space-y-6 w-full">
         <h2 class="text-3xl font-bold ">Habilidades Tecnicas</h2>
-        <p>
+        <p class=" md:mt-0 text-sm  md:text-md  lg:text-lg xl:text-xl text-justify">
           Profesional de TI con habilidades en múltiples áreas, incluyendo desarrollo de software y administración de sistemas. Capacidad para adaptarme rápidamente a nuevas tecnologías y resolver problemas complejos de manera eficiente.
         </p> 
       </div>
