--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@
 <section id="contact" class="py-20 bg-[url(/images/bg_contact.jpg)] bg-cover bg-fixed">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center">Contacto</h2>
-      <form class="mt-8 max-w-lg mx-auto">
+      <form class="mt-8 max-w-lg mx-auto" action="https://formspree.io/f/myzekbgg" method="POST">
         <div class="mb-4">
           <label for="name" class="block text-sm font-medium">Nombre</label>
           <input type="text" id="name" class="mt-1 p-2 w-full rounded">
