--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,7 +3,7 @@
 ---
 
 <section id="projects" class="py-20  bg-gray-800">
-    <div class="container mx-auto px-4">
+    <div class=" container mx-auto px-4 w-12/12 md:w-11/12 lg:w-10/12  xl:w-9/12  2xl:w-8/12 ">
       <h2 class="text-3xl font-bold text-center">Proyectos</h2>
       <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <div class=" p-6 rounded-lg  bg-neutral-900">
