--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,20 +4,14 @@
 
 <section id="projects" class="py-20  bg-gray-800">
     <div class=" container mx-auto px-4 w-12/12 md:w-11/12 lg:w-10/12  xl:w-9/12  2xl:w-8/12 ">
-      <h2 class="text-3xl font-bold text-center">Proyectos</h2>
-      <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class=" p-6 rounded-lg  bg-neutral-900">
-          <h3 class="text-xl font-bold ">Proyecto 1</h3>
-          <p class="mt-2">Descripción breve del proyecto 1.</p>
+      <a href="https://github.com/ronald-dev86/frontino-back" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700" target="_blank" >
+        
+        <div class=" w-full lg:w-screen  h-72  bg-[url(/images/project/api-rest-frontino.jpg)] bg-cover bg-center rounded-t-lg md:rounded-none md:rounded-s-lg" ></div>
+        <div class="flex flex-col justify-between p-4 leading-normal">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Frontino Api-Rest</h5>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Esta Api permite gestionar el consumo de Gas que emite los medidores, por medio de usuario, clientes, servicios y facturas, tiene una manejo de usuario por roles Admin, Owner y Views. Ofrece endpoints para crear, leer, actulizar y eliminar. Además, proporciona funcionalidades de genreacion de reportes.</p>
         </div>
-        <div class=" p-6 rounded-lg  bg-neutral-900">
-          <h3 class="text-xl font-bold">Proyecto 2</h3>
-          <p class="mt-2">Descripción breve del proyecto 2.</p>
-        </div>
-        <div class="p-6 rounded-lg  bg-neutral-900">
-          <h3 class="text-xl font-bold">Proyecto 3</h3>
-          <p class="mt-2">Descripción breve del proyecto 3.</p>
-        </div>
-      </div>
+        
+      </a>
     </div>
   </section>
