cambios descripcion de le proyecto

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -9,7 +9,7 @@
         <div class=" w-full lg:w-screen  h-72  bg-[url(/images/project/api-rest-frontino.jpg)] bg-cover bg-center rounded-t-lg md:rounded-none md:rounded-s-lg" ></div>
         <div class="flex flex-col justify-between p-4 leading-normal">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Frontino Api-Rest</h5>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Esta Api permite gestionar el consumo de Gas que emite los medidores, por medio de usuario, clientes, servicios y facturas, tiene una manejo de usuario por roles Admin, Owner y Views. Ofrece endpoints para crear, leer, actulizar y eliminar. Además, proporciona funcionalidades de genreacion de reportes.</p>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Esta Api permite gestionar el consumo de Gas que emite los medidores, en urbanismos y conjuntos residenciales, permite gestionar clientes, servicios y facturas, tiene el manejo de usuario por roles Admin, Owner y Views. Ofrece endpoints para crear, leer, actulizar y eliminar. Además, proporciona funcionalidades de generación de reportes.</p>
         </div>
         
       </a>
