--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@
 
 <section id="projects" class="py-20  bg-gray-800">
     <div class=" container mx-auto px-4 w-12/12 md:w-11/12 lg:w-10/12  xl:w-9/12  2xl:w-8/12 ">
-      <a href="https://github.com/ronald-dev86/frontino-back" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700" target="_blank" >
+      <a href="https://github.com/ronald-dev86/frontino-back" class="animate__animated animate__fadeInRight flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow-sm md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700" target="_blank" >
         
         <div class=" w-full lg:w-screen  h-80  bg-[url(/images/project/api-rest-frontino.jpg)] bg-cover bg-center rounded-t-lg md:rounded-none md:rounded-s-lg" ></div>
         <div class="flex flex-col justify-between p-4 leading-normal">
