--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,22 +3,21 @@
 import 'animate.css';
 ---
 
-<section id="about" class="py-20 bg-gray-800">
+<section id="about" class="py-20 bg-gray-700 ">
     <div class="container mx-auto px-4 w-12/12 md:w-11/12 lg:w-10/12  xl:w-9/12  2xl:w-8/12 ">
       <h2 class="text-3xl font-bold text-center pb-8">Sobre Mí</h2>
       <div class=" flex flex-col items-center">
         
         <p class="  text-sm  md:text-md  lg:text-lg xl:text-xl  text-justify">
-          Soy Ronald Peñaloza, Ingeniero de sistemas con experiencia en el desarrollo de software. Mi trayectoria profesional comenzó en el área de control de calidad (QA), lo que me proporcionó una base sólida en la detección y resolución de problemas. Posteriormente, me enfoqué en el desarrollo, donde he encontrado mi verdadera pasión en la creación de soluciones digitales.
+          Soy Ronald Peñaloza, Ingeniero de Sistemas apasionado por el desarrollo de software. Mi carrera despegó en Control de Calidad (QA), donde cultivé una sólida capacidad para la detección y resolución de problemas, una base que hoy enriquece mi enfoque en el desarrollo de soluciones digitales innovadoras y eficientes. He participado en una diversidad de proyectos, desde aplicaciones para pequeñas empresas hasta sistemas complejos, manteniéndome siempre al día con las últimas tendencias tecnológicas para asegurar la máxima calidad.
         </p> <br>
         <p class="  text-sm  md:text-md  lg:text-lg xl:text-xl text-justify">
-          A lo largo de mi carrera, he participado en una amplia variedad de proyectos, desde el desarrollo de aplicaciones para pequeñas empresas hasta la creación de aplicaciones complejas. Me mantengo actualizado con las últimas tendencias tecnológicas para garantizar la calidad y eficiencia de mis trabajos.
+          Fuera del ámbito tecnológico, soy un entusiasta de deportes como el rugby, fútbol, natación, ciclismo y artes marciales, actividades que me han inculcado el valor del trabajo en equipo, la comunicación efectiva y la perseverancia.
         </p><br>
         <p class=" text-sm  md:text-md  lg:text-lg xl:text-xl text-justify">  
-          Soy un entusiasta de los deportes, incluyendo rugby, fútbol, natación, ciclismo y artes marciales. Estas actividades me han enseñado la importancia del trabajo en equipo, la comunicación efectiva y la perseverancia.
+          Mi motor es utilizar la tecnología para generar un impacto positivo, y busco colaborar con profesionales que compartan esta visión. Si tienes un proyecto en mente, me encantaría conectar y explorar cómo podemos crear soluciones transformadoras juntos.
         </p><br>
-        <p class="text-sm  md:text-md  lg:text-lg xl:text-xl text-justify"> 
-          Mi principal motivación es utilizar la tecnología para generar un impacto positivo y colaborar con profesionales que comparten esta visión. Si tiene un proyecto en mente, le invito a contactarme para explorar cómo podemos trabajar juntos y crear soluciones innovadoras.</p>
+        
       </div>
     </div>
   </section>
