--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,11 +15,14 @@ import { Icon } from 'astro-icon/components'
         <a href="https://github.com/ronald-dev86" target="_blank" class="px-3">
             <Icon class="size-8"  name="github"/>
         </a>
-        <a href="https://www.instagram.com/rpenaloza08" target="_blank" class="px-3">
+        <a href="https://www.instagram.com/rpenaloza.dev" target="_blank" class="px-3">
             <Icon class="size-8"  name="instagram"/>
         </a>
         <a href="https://wa.me/584129653465" target="_blank" class="px-3">
             <Icon class="size-8"  name="whatsapp"/>
+        </a>
+        <a href="https://t.me/ronalddev86" target="_blank" class="px-3">
+          <Icon class="size-8" name="paper-plane-outline" />
         </a>
       </div>
    
