--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -22,17 +22,17 @@ import { Icon } from 'astro-icon/components'
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Turpial task app</h5>
           <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Aplicacion de tareas desarrollada con Angular y Firebase, permite a los usuarios crear, editar y eliminar tareas, ademas de gestionar la autenticacion de usuarios. Su api rest esta desarrollada con Node.js y Express.js  aplicado arquitectura Hexagonal. Muy sencilla y eficiente para la gestion de tareas.</p>
-          <div class="flex justify-around">
-            <a href="https://github.com/ronald-dev86/turpial-api-rest" target="_blank"  class="text-black">
-              Backend
+          <div class="flex justify-around text-center">
+            <a href="https://github.com/ronald-dev86/turpial-api-rest" target="_blank"  class="text-black justify-center">
+              
               <Icon class="size-8"  name="github"/>
             </a>
             <a href="https://github.com/ronald-dev86/turpial-app-angular" target="_blank"  class="text-black">
-              Frontend
+              
               <Icon class="size-8"  name="github"/>
             </a>
             <a href="https://turpial-app-angular.vercel.app/login" target="_blank"  class="text-black">
-              Demo
+              
               <Icon class="size-8"  name="reader"/>
             </a>
           </div>
