--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,11 @@
 import { Icon } from 'astro-icon/components'
 ---
 
-<header class="sticky top-0  z-10  p-6">
+<header class="sticky top-0  z-10  p-6 bg-stone-950 bg-opacity-35">
     <nav class="container mx-auto flex justify-between items-end">
-      <div class=" my-3 mx-12 flex justify-between ">
+        <div class=" my-3 sm:mx-12 flex justify-between ">
             <div class="flex justify-around">
-                <a href="https://www.linkedin.com/in/ronald-pe%C3%B1aloza/" target="_blank" class="px-3">
+                <a href="https://www.linkedin.com/in/ronald-pe%C3%B1aloza/" target="_blank">
                     <Icon class="size-6 drop-shadow-[4px_3px_3px_rgba(29,78,216,1.25)]"  name="linkedin"/>
                 </a>
                 <a href="https://github.com/ronald-dev86" target="_blank" class="px-3">
@@ -24,9 +24,12 @@ import { Icon } from 'astro-icon/components'
             </div>
             
         </div>
-      <a href="/file/fullstack_con foto.pdf"  target="_blank" class="flex items-end space-x-2 ">
-        <Icon class="sm:size-7  drop-shadow-[4px_3px_3px_rgba(29,78,216,1.25)]" name="reader" />
-        <span class="px-[5px] tracking-widest hire-me">Mi CV</span>
-      </a>
+        <div class=" my-3 mx-12flex justify-center ">
+            <a href="/file/fullstack_con foto.pdf"  target="_blank" class="flex items-end space-x-2 ">
+                <Icon class="size-6   drop-shadow-[4px_3px_3px_rgba(29,78,216,1.25)]" name="reader" />
+                <span class="px-[5px] tracking-widest hire-me sr-only sm:not-sr-only">Mi CV</span>
+            </a>
+        </div>
+      
     </nav>
   </header>
