--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ronald Pe#aloza</title>
+  <title>Ronald Peñaloza</title>
   <link rel="icon" type="image/x-icon" href="/images/r_p.png">
 </head>
 <body class="bg-stone-950 text-gray-50">
