--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components'
+import { socialLinks } from '../data/config.ts'
 ---
 
 <footer class="p-6 text-center">
@@ -8,21 +9,21 @@ import { Icon } from 'astro-icon/components'
       <div class=" mb-4">
         <p>Seguime en mis redes sociales</p>
       </div>
-      <div class="flex justify-center">
-        <a href="https://www.linkedin.com/in/ronald-pe%C3%B1aloza/" target="_blank" class="px-3">
-            <Icon class="size-8"  name="linkedin"/>
+<div class="flex justify-center">
+        <a href={socialLinks.linkedin.url} target="_blank" class="px-3" aria-label={socialLinks.linkedin.label}>
+            <Icon class="size-8" name={socialLinks.linkedin.icon}/>
         </a>
-        <a href="https://github.com/ronald-dev86" target="_blank" class="px-3">
-            <Icon class="size-8"  name="github"/>
+        <a href={socialLinks.github.url} target="_blank" class="px-3" aria-label={socialLinks.github.label}>
+            <Icon class="size-8" name={socialLinks.github.icon}/>
         </a>
-        <a href="https://www.instagram.com/rpenaloza.dev" target="_blank" class="px-3">
-            <Icon class="size-8"  name="instagram"/>
+        <a href={socialLinks.instagram.url} target="_blank" class="px-3" aria-label={socialLinks.instagram.label}>
+            <Icon class="size-8" name={socialLinks.instagram.icon}/>
         </a>
-        <a href="https://wa.me/584129653465" target="_blank" class="px-3">
-            <Icon class="size-8"  name="whatsapp"/>
+        <a href={socialLinks.whatsapp.url} target="_blank" class="px-3" aria-label={socialLinks.whatsapp.label}>
+            <Icon class="size-8" name={socialLinks.whatsapp.icon}/>
         </a>
-        <a href="https://t.me/ronalddev86" target="_blank" class="px-3">
-          <Icon class="size-8" name="paper-plane-outline" />
+        <a href={socialLinks.telegram.url} target="_blank" class="px-3" aria-label={socialLinks.telegram.label}>
+          <Icon class="size-8" name={socialLinks.telegram.icon} />
         </a>
       </div>
    
@@ -58,28 +59,6 @@ import { Icon } from 'astro-icon/components'
     </div>
   </div>
   
-    <!--
-  
-    <div class="  border  m-3 flex flex-col ">
-      <div class=" my-3 mx-12  justify-center">
-        <p>Seguime en mis redes sociales</p>
-        <div class="flex justify-around">
-          
-            <a href="https://www.linkedin.com/in/ronald-pe%C3%B1aloza/" target="_blank" class="px-3">
-                <Icon class="size-6"  name="linkedin"/>
-            </a>
-            <a href="https://github.com/ronald-dev86" target="_blank" class="px-3">
-                <Icon class="size-6"  name="github"/>
-            </a>
-            <a href="https://www.instagram.com/rpenaloza08" target="_blank" class="px-3">
-                <Icon class="size-6"  name="instagram"/>
-            </a>
-            <a href="https://wa.me/584129653465" target="_blank" class="px-3">
-                <Icon class="size-6"  name="whatsapp"/>
-            </a>
-        </div>
-      </div>
-    </div>
-     -->
+
     
 </footer>
